2015-07-20  Doug Evans  <dje@google.com>

	* Makefile.in (STABS_DOC_BUILD_INCLUDES): Add gdb-cfg.texi, GDBvn.texi.

2015-07-16  Doug Evans  <dje@google.com>

	* stabs.texinfo: @include gdb-cfg.texi.

2015-07-08  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.texinfo (Selection): Update documentation for 'frame'
	command.

2015-07-02  Markus Metzger  <markus.t.metzger@intel.com>

        * gdb.texinfo (Maintenance Commands): Document "maint btrace"
	commands.

2015-07-02  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.texinfo (Process Record and Replay): Spell out that variables
	and registers are not available during btrace replay.
	Describe the new "record btrace pt" command.
	Describe the new "set|show record btrace pt buffer-size" options.
	(General Query Packets): Describe the new Qbtrace:pt and
	Qbtrace-conf:pt:size packets.
	Expand "bts" to "Branch Trace Store".
	Update the branch trace DTD.

2015-06-26  Patrick Palka  <patrick@parcs.ath.cx>

	* gdb.texinfo (Command History): Document the new option
	"history remove-duplicates".

2015-06-19  Doug Evans  <dje@google.com>

	* stabs.texinfo (ELF Linker Relocation): Mention Sun stabs is no
	longer supported.

2015-06-17  Patrick Palka  <patrick@parcs.ath.cx>

	* gdb.texinfo (Command History): Mention that setting
	GDBHISTSIZE to the empty string disables history truncation.

2015-06-17  Patrick Palka  <patrick@parcs.ath.cx>

	PR gdb/16999
	* gdb.texinfo (Command History): Mention new GDBHISTSIZE
	behavior.

2015-06-17  Patrick Palka  <patrick@parcs.ath.cx>

	* gdb.texinfo (Command History): Replace occurrences of HISTSIZE
	with GDBHISTSIZE.

2015-06-15  Simon Marchi  <simon.marchi@ericsson.com>

	* gdb.texinfo (GDB/MI Data Manipulation): Clarify usage of
	bytes and memory units for -data-{read,write}-memory-bytes.
	(Packets): Same for m, M and X packets.
	* python.texi (Inferiors In Python): Same for read_memory and
	write_memory.

2015-06-10  Jon Turney  <jon.turney@dronecode.org.uk>
